erDiagram
    USERS {
        UNSIGNED_BIGINT id PK
        STRING name
        STRING email UK
        TIMESTAMP email_verified_at
        STRING verification_token
        TIMESTAMP verification_token_expires_at
        STRING password
        STRING remember_token
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }
erDiagram
    PROFILES {
        UNSIGNED_BIGINT id PK
        UNSIGNED_BIGINT user_id FK
        STRING avatar_paths
        STRING usernames
        STRING postal_codes
        STRING addresses
        STRING building_names
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }
erDiagram
    CATEGORIES {
        UNSIGNED_BIGINT id PK
        STRING category_names
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }
erDiagram
    ITEMS {
        UNSIGNED_BIGINT id PK
        UNSIGNED_BIGINT user_id FK
        STRING item_image_paths
        STRING item_names
        STRING brand_names
        UNSIGNED_INTEGER item_prices
        UNSIGNED_INTEGER like_counts
        UNSIGNED_INTEGER comment_counts
        STRING item_descriptions
        UNSIGNED_TINYINT conditions
        BOOLEAN is_sold
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }
erDiagram
    COMMENTS {
        UNSIGNED_BIGINT id PK
        UNSIGNED_BIGINT item_id FK
        UNSIGNED_BIGINT user_id FK
        STRING comment_body
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }
erDiagram
    ORDERS {
        UNSIGNED_BIGINT id PK
        UNSIGNED_BIGINT user_id FK
        UNSIGNED_BIGINT item_id FK
        UNSIGNED_INTEGER total_amount
        STRING status
        STRING payment_method
        TEXT shipping_address
        TEXT comment
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }
erDiagram
    CATEGORY_ITEMS {
        UNSIGNED_BIGINT id PK
        UNSIGNED_BIGINT category_id FK
        UNSIGNED_BIGINT item_id FK
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }

  erDiagram
    ITEM_LIKES {
        UNSIGNED_BIGINT id PK
        UNSIGNED_BIGINT item_id FK
        UNSIGNED_BIGINT user_id FK
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }

    %% リレーション定義（修正版）
    USERS ||--o| PROFILES : "USERS.id = PROFILES.user_id"
    USERS ||--o{ ITEMS : "USERS.id = ITEMS.user_id"
    USERS ||--o{ COMMENTS : "USERS.id = COMMENTS.user_id"
    USERS ||--o{ ORDERS : "USERS.id = ORDERS.user_id"
    USERS ||--o{ ITEM_LIKES : "USERS.id = ITEM_LIKES.user_id"
    
    ITEMS ||--o{ COMMENTS : "ITEMS.id = COMMENTS.item_id"
    ITEMS ||--o{ ORDERS : "ITEMS.id = ORDERS.item_id"
    ITEMS ||--o{ ITEM_LIKES : "ITEMS.id = ITEM_LIKES.item_id"
    ITEMS ||--|{ CATEGORY_ITEMS : "ITEMS.id = CATEGORY_ITEMS.item_id"
    
    CATEGORIES ||--o{ CATEGORY_ITEMS : "CATEGORIES.id = CATEGORY_ITEMS.category_id"
